--- a/views/clients/index.ejs
+++ b/views/clients/index.ejs
@@ -3,10 +3,10 @@
 	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		<div class="navbar-nav">
 			<a href='/loggedin'>
-				<button class="btn btn-primary">Home</button></a>
-			<a href='/clients/newclient'><button class="btn btn-primary">Create New Client</button></a>
+				<button class="button is-primary">Home</button></a>
+			<a href='/clients/newclient'><button class="button is-primary">Create New Client</button></a>
 			<a href='/clients/search'>
-				<button class="btn btn-primary">Destination Search</button></a>
+				<button class="button is-primary">Destination Search</button></a>
 
 		</div>
 	</div>
@@ -14,8 +14,8 @@
 
 <!--Creates a table of clients ordered by last name and type of travel they are interested in -->
 
-<div class="">
-	<table class="">
+<div class="table-container">
+	<table class="table is-striped is-narrow is-hoverable is-fullwidth">
 		<thead>
 			<tr>
 				<th class="" scope="col">Last Name</th>
