--- a/views/clients/newclient.ejs
+++ b/views/clients/newclient.ejs
@@ -3,9 +3,9 @@
 	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		<div class="navbar-nav">
 			<a href='/loggedin'>
-				<button class="btn btn-primary">Home</button></a>
+				<button class="button is-primary">Home</button></a>
 			<a href='/clients/'>
-				<button class="btn btn-primary">View All Clients</button></a>
+				<button class="button is-primary">View All Clients</button></a>
 
 		</div>
 	</div>
@@ -13,27 +13,33 @@
 
 <!--Creates a form for user to create a new client to be added to database -->
 
-<div class="">
+<div class="field">
 	<form method="POST" action="/clients">
 
-		<h1 class="">New Client</h1>
-		<input name="fname" type="text" placeholder="First Name:" /><br>
-		<input name="lname" type="text" placeholder="Last Name:" /><br>
-		<select name="sex" type="text">
-			<option value="Male">Male</option>
-			<option value="Female">Female</option>
-		</select><br>
-		<input name="address" type="text" placeholder="Address:" /><br>
-		<input name="homephone" type="tel" placeholder="Home Phone:" /><br>
-		<input name="cellphone" type="tel" placeholder="Cell Phone:" /><br>
-		<input name="email" type="email" placeholder="Email:" /><br>
-		<input name="dob" type="date" placeholder="Date of Birth:" /><br>
-		<select name="clienttag" type="text"><br>
-			<% type.forEach(type =>{ %>
-			<option value="<%= type.typeid %>"><%= type.type %></option>
-			<% }) %>
-		</select><br>
-		<input class="" type="Submit" Value="Create New Profile" />
+		<h1 class="title">New Client</h1>
+		<input class="input is-medium" name="fname" type="text" placeholder="First Name:" /><br>
+		<input class="input is-medium" name="lname" type="text" placeholder="Last Name:" /><br>
+		<div class="select is-danger">
+
+			<select name="sex" type="text">
+				<option value="Male">Male</option>
+				<option value="Female">Female</option>
+			</select>
+		</div>
+		<input class="input is-medium" name="address" type="text" placeholder="Address:" /><br>
+		<input class="input is-medium" name="homephone" type="tel" placeholder="Home Phone:" /><br>
+		<input class="input is-medium" name="cellphone" type="tel" placeholder="Cell Phone:" /><br>
+		<input class="input is-medium" name="email" type="email" placeholder="Email:" /><br>
+		<input class="input is-medium is-danger" name="dob" type="date" placeholder="Date of Birth:" /><br>
+		<div class="select is-danger">
+			<select name="clienttag" type="text"><br>
+				<% type.forEach(type =>{ %>
+				<option value="<%= type.typeid %>"><%= type.type %></option>
+				<% }) %>
+			</select><br>
+
+		</div>
+		<input class="button is-info" type="Submit" Value="Create New Profile" />
 
 	</form>
 
