--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,31 +1,48 @@
 <% include ./partials/boilerplate.ejs %>
-<nav class="">
+<!-- <nav class="">
 	<div class="" id="navbarNavAltMarkup">
 		<div class="">
 			<a href='/clients/newclient'>
-				<button class="">Create New Client</button></a>
+				<button class="button is-primary">Create New Client</button></a>
 			<a href='/clients/'>
-				<button class="">View All Clients</button></a>
+				<button class="button is-primary">View All Clients</button></a>
 			<a href='/clients/search'>
-				<button class="">Destination Search</button></a>
+				<button class="button is-primary">Destination Search</button></a>
 		</div>
 	</div>
+</nav> -->
+
+<nav class="navbar" role="navigation" aria-label="main navigation">
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/">
+			<img src="https://cdn2.iconfinder.com/data/icons/mixed-icon-collection/100/Airplane-512.png" width="70"
+				height="35">
+		</a>
+		<h1 class="header">travelDash2.0</h1>
+		<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+			data-target="navbarBasicExample">
+			<span aria-hidden="true"></span>
+			<span aria-hidden="true"></span>
+			<span aria-hidden="true"></span>
+		</a>
+	</div>
+
+	<div id="navbarBasicExample" class="navbar-menu">
+
+		<div class="navbar-end">
+			<div class="navbar-item">
+				<div class="buttons">
+					<a href='/clients/newclient'>
+						<button class="button is-primary">Create New Client</button></a>
+					<a href='/clients/'>
+						<button class="button is-primary">View All Clients</button></a>
+					<a href='/clients/search'>
+						<button class="button is-primary">Destination Search</button></a>
+				</div>
+			</div>
+		</div>
+
+	</div>
 </nav>
-<!-- Home page where users can create a new client to add to database and also view all clients in database-->
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<h3 class="">My Life Is Your Vacation</h3>
-
-
-
-
 
 <% include ./partials/footer.ejs %>
