--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,22 +2,22 @@
 
 <!--Logs in user and directs to Home page -->
 
-<div class="">
+<div class="field">
   <form action="/login" method="post">
-    <label>
-      <h1 class="">Username:</h1>
-      <input type="text" name="username" autocomplete=''>
+    <label class="label">
+      Username:
+      <input class="input is-small is-rounded is-focused" type="text" name="username" autocomplete=''>
     </label><br>
-    <label>
-      <h1 class="">Password:</h1>
-      <input type="password" name="password" autocomplete=''>
+    <label class="label">
+      Password:
+      <input class="input is-small is-rounded  type=" password" name="password" autocomplete=''>
     </label><br>
-    <button type="submit" class="btn btn-primary">Log In</button>
+    <button type="submit" class="button is-link">Log In</button>
   </form>
 </div>
 <br>
 <br>
 <br>
-<h1 class=""><a href='/signup'>Don't Have An Account? Sign UP!</a></h1>
+<a class="button is-success" href='/signup'>Don't Have An Account? Sign UP!</a>
 
 <% include ./partials/footer.ejs %>
