--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -4,20 +4,38 @@
 <head>
 	<meta charset="utf-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0' />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 
-
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-	<title>travel Liaison</title>
-
-
-	
+	<title>travelDash2.0</title>
 	<script src='/src/main.js'></script>
-
+	<!-- <script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCauaNqQYhr7-7PFd3MkFBfXkhRPR6Q70&callback=initMap">
+		</script> -->
 	<link rel="stylesheet" type='text/css' href="/css/style.css">
 </head>
 
 <body>
-	<main>
-		<h1>travel Liaison</h1>
+	<section>
+		<main>
+			<nav class="navbar" role="navigation" aria-label="main navigation">
+				<div class="navbar-brand">
+					<a class="navbar-item" href="/">
+						<img src="https://cdn2.iconfinder.com/data/icons/mixed-icon-collection/100/Airplane-512.png"
+							width="70" height="35">
+					</a>
+					<h1 class="header">travelDash2.0</h1>
+					<a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+						data-target="navbarBasicExample">
+						<span aria-hidden="true"></span>
+						<span aria-hidden="true"></span>
+						<span aria-hidden="true"></span>
+					</a>
+				</div>
+
+				<div id="navbarBasicExample" class="navbar-menu">
+
+
+
+				</div>
+			</nav>
