--- a/views/clients/profile.ejs
+++ b/views/clients/profile.ejs
@@ -28,7 +28,7 @@
 </div> -->
 <!-- Boarding pass design belongs to Lennart Hase https://codepen.io/motorlatitude/pen/JhuoB -->
 
-<div class="box">
+<div class="box1">
 	<ul class="left">
 		<li></li>
 		<li></li>
