--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,13 +1,12 @@
 <% include ./partials/boilerplate.ejs %>
 
-<!-- Creates Google map -->
-<div id="map"></div>
+
 
 
 
 
 <a href='/loggedin'>
-	<button class="btn btn-primary">Home</button></a>
+	<button class="button is-primary">Home</button></a>
 
 
 <% include ./partials/footer %>
