--- a/views/clients/index.ejs
+++ b/views/clients/index.ejs
@@ -1,16 +1,31 @@
 <% include ../partials/boilerplate %>
+
+
+<section class="hero dash-img">
+	<div class="hero-body">
+		<div class="container">
+			<h1 class="title">
+				Client Dashboard
+			</h1>
+
+		</div>
+	</div>
+</section>
+<br>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		<div class="navbar-nav">
 			<a href='/loggedin'>
 				<button class="button is-primary">Home</button></a>
 			<a href='/clients/newclient'><button class="button is-primary">Create New Client</button></a>
-			<a href='/clients/search'>
-				<button class="button is-primary">Destination Search</button></a>
+			<!-- <a href='/clients/search'>
+					<button class="button is-primary">Destination Search</button></a> -->
 
 		</div>
 	</div>
 </nav>
+
+
 
 <!--Creates a table of clients ordered by last name and type of travel they are interested in -->
 
