--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,22 @@
 <% include ./partials/boilerplate.ejs %>
+<section class="hero dash-img">
+	<div class="hero-body">
+		<div class="container">
+			<h1 class="title">
+				Client Dashboard
+			</h1>
 
+		</div>
+	</div>
+</section>
+<br>
 <div class="nav-btn buttons">
 	<a href='/clients/'>
 		<button class="button is-primary">View All Clients</button></a>
 	<a href='/clients/newclient'>
 		<button class="button is-primary">Create New Client</button></a>
-	<a href='/clients/search'>
-		<button class="button is-primary">Destination Search</button></a>
+	<!-- <a href='/clients/search'>
+		<button class="button is-primary">Destination Search</button></a> -->
 </div>
 
 <% include ./partials/footer.ejs %>
