--- a/views/clients/newclient.ejs
+++ b/views/clients/newclient.ejs
@@ -1,22 +1,29 @@
 <% include ../partials/boilerplate %>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		<div class="navbar-nav">
-			<a href='/loggedin'>
-				<button class="button is-primary">Home</button></a>
-			<a href='/clients/'>
-				<button class="button is-primary">View All Clients</button></a>
+<section class="hero dash-img">
+	<div class="hero-body">
+		<div class="container">
+			<h1 class="title">
+				New Client
+			</h1>
 
 		</div>
 	</div>
-</nav>
+</section>
+<br>
+
+<a href='/loggedin'>
+	<button class="button is-primary">Home</button></a>
+<a href='/clients/'>
+	<button class="button is-primary">View All Clients</button></a>
+
+
 
 <!--Creates a form for user to create a new client to be added to database -->
 
-<div class="field">
+<div class="box login-box field">
 	<form method="POST" action="/clients">
 
-		<h1 class="title">New Client</h1>
+
 		<input class="input is-medium" name="fname" type="text" placeholder="First Name:" /><br>
 		<input class="input is-medium" name="lname" type="text" placeholder="Last Name:" /><br>
 		<div class="select is-danger">
