--- a/views/clients/profile.ejs
+++ b/views/clients/profile.ejs
@@ -1,4 +1,15 @@
 <% include ../partials/boilerplate %>
+<section class="hero dash-img">
+	<div class="hero-body">
+		<div class="container">
+			<h1 class="title">
+				Client Profile
+			</h1>
+
+		</div>
+	</div>
+</section>
+<br>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		<div class="navbar-nav">
@@ -63,7 +74,7 @@
 		<li></li>
 	</ul>
 	<div class="ticket">
-		<span class="airline">Travel Liason</span>
+		<span class="airline">Travel Dash Air</span>
 		<span class="airline airlineslip">GOAT AIR</span>
 		<span class="boarding">PROFILE</span>
 		<div class="content">
