--- a/public/css/style.css
+++ b/public/css/style.css
@@ -453,8 +453,8 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
-  .box {
-    margin-top: 175px;
+  .box1 {
+    margin-top: 500px;
     transform: rotate(90deg);
   }
 }
