Trying to deploy to Heroku

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 
 <!--Signup page that Posts users database -->
 
-<div class="">
+<div class="box login-box">
 	<form action="/clients/users" method="POST">
 		<lable>
 			<h1 class="edithead">Username:</h1><br>
